--- a/README
+++ b/README
@@ -7,6 +7,7 @@ Functions:
 
  * Create a file, write into an existing file
  * Import modules or use module attribute not in the whitelist
+ * exit()
 
 Protection of the sandbox itself:
 
