Write more links (python-dev mailing list) in README

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,6 @@
-Victor Stinner <victor.stinner AT haypocalc.com>
+AUTHORS
+=======
+
 Tav Vageesan Sivapathasundaram <tav AT espians.com> - author of safelite.py
+Victor Stinner <victor.stinner AT haypocalc.com> - author of pysandbox, based on safelite.py
 
