--- a/TODO
+++ b/TODO
@@ -1,8 +1,7 @@
  * Write a real proxy for safe_open()
    * Deny: real_open = open("tests.py").__class__; real_open("...", "w")
  * Deny: func.func_code, func.__code__, compile(), generator.gi_code
- * Deny: type.__subclasses__
- * Deny builtins: 'execfile', 'reload', 'compile', 'input', 'eval'
+ * Deny builtins: 'execfile', 'reload', 'input', 'eval'
  * Check interaction with threads
  * Check interaction with signals, eg. SIGALARM and SIGTERM
  * Make __builtins__ read only?
