--- a/TODO
+++ b/TODO
@@ -12,5 +12,6 @@
    Grep the source for PyImport.
  * RuntimeError: maximum recursion depth exceeded
    http://mail.python.org/pipermail/python-dev/2009-February/086463.html
+ * Fix "raise" in interpreter.py
 
 
