--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+ * Improve type(open(...))(filename, "r") error message,
+   see test_import_sys_stdout()
  * Deny: func.func_code, func.__code__, compile(), generator.gi_code
  * Deny builtins: 'execfile', 'reload', 'input', 'eval'
  * Check interaction with threads
