--- a/TODO
+++ b/TODO
@@ -15,5 +15,5 @@
  * RuntimeError: maximum recursion depth exceeded
    http://mail.python.org/pipermail/python-dev/2009-February/086463.html
  * Fix "raise" in interpreter.py
-
+ * Limit CPU / memory usage
 
