--- a/TODO
+++ b/TODO
@@ -17,4 +17,14 @@
    http://mail.python.org/pipermail/python-dev/2009-February/086463.html
  * Fix "raise" in interpreter.py
  * Limit CPU / memory usage
+ * Remove/Warn about unsafe frame locals, eg.
+
+   secret=42
+   with Sandbox():
+      print secret # should raise an error
+
+   or
+
+   with Sandbox() as sandbox:
+      print sandbox # should raise an error
 
