proxy() supports tuple, list, dict and None

--- a/TODO
+++ b/TODO
@@ -32,4 +32,5 @@
    Problem: in a function, locals have their "cache" using LOAD_FAST
    and STORE_FAST bytecodes. frame.f_locals is cached in frame.f_localsplus. 
 
+ * import sys; sys.setrecursionlimit(50)
 
