--- a/README
+++ b/README
@@ -1,7 +1,12 @@
 pysandbox is a Python sandbox.
 
+Website: http://github.com/haypo/pysandbox/
+
 Status
 ======
+
+pysanbox is under heavy development, and should not be used in production
+applications. 
 
 pysanbox is tested on Python 2.5 and 2.6 on Debian Sid.
 
