--- a/README
+++ b/README
@@ -12,14 +12,15 @@ pysanbox is tested on Python 2.5 and 2.6 on Debian Sid.
 
 See TODO file for the complete status.
 
-Blocked functions
-=================
+Blocked features 
+================
 
-Functions:
+Features:
 
  * Read, write, or create a file
  * Import modules
- * exit()
+ * Exit Python
+ * Access stdin, stdout or stderr
 
 Protection of the sandbox itself:
 
