Change Tav author name; add more URLs to the README

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 AUTHORS
 =======
 
-Tav Vageesan Sivapathasundaram <tav AT espians.com> - author of safelite.py
+Tav <tav AT espians.com> - author of safelite.py
 Victor Stinner <victor.stinner AT haypocalc.com> - author of pysandbox, based on safelite.py
 
