--- a/README
+++ b/README
@@ -44,9 +44,11 @@ way to configure it.
 Features
 --------
 
+ - debug_sandbox: enable traceback on the sandbox itself
  - exit: sys.exit() and raise SystemExit()
  - interpreter: give access to stdio streams, enable traceback, pydoc.help()
  - regex: compile regex, match regex, search regex, etc. (re module)
+ - site: allow to read the license file
  - stdin, stdout, stderr: sys.stdin, sys.stdout and sys.stderr
  - traceback: next calls to allowModule() will add the module filename to the
    open() whitelist, so Python can print a traceback
