--- a/README
+++ b/README
@@ -45,23 +45,31 @@ way to configure it.
 Features
 --------
 
- - debug_sandbox: enable traceback on the sandbox itself
- - exit: sys.exit() and raise SystemExit()
- - interpreter: give access to stdio streams, enable traceback, pydoc.help()
- - regex: compile regex, match regex, search regex, etc. (re module)
- - site: allow to read the license file
- - stdin, stdout, stderr: sys.stdin, sys.stdout and sys.stderr
- - traceback: next calls to allowModule() will add the module filename to the
+ - "debug_sandbox": enable traceback on the sandbox itself
+ - "exit": sys.exit() and raise SystemExit()
+ - "interpreter": give access to stdio streams, enable traceback, pydoc.help()
+ - "regex": compile regex, match regex, search regex, etc. (re module)
+ - "site": allow to read the license file
+ - "stdin", "stdout", "stderr": sys.stdin, sys.stdout and sys.stderr
+ - "traceback": next calls to allowModule() will add the module filename to the
    open() whitelist, so Python can print a traceback
 
 To enable a feature, use SandboxConfig('feature1', 'feature2', ...) or
 config.enable('feature').
 
+CPython restricted mode
+-----------------------
+
+Use SandboxConfig(cpython_restricted=True) to enable CPython restricted mode.
+In this mode, reading a file and modify a class are blocked. Some attributes
+are hidden (eg. method.__self__), other are read only (eg. func.__doc__).
+
+CPython restricted mode is disabled by default. The restricted mode is
+incompatible with SandboxConfig "traceback" feature and allowPath() method.
 
 Other options
 -------------
 
- - cpython_restricted: if True, use CPython restricted mode (disabled by default)
  - config.allowPath(path) allows to read a file from the specified path
  - config.allowModule(name, symbol1, symbol2, ...) allows to import the
    specified module, but give only access to the specified symbols
