--- a/README
+++ b/README
@@ -47,7 +47,7 @@ Features
 
  - "debug_sandbox": enable traceback on the sandbox itself
  - "exit": sys.exit() and raise SystemExit()
- - "interpreter": give access to stdio streams, enable traceback, pydoc.help()
+ - "interpreter": give access to stdio streams, enable traceback
  - "regex": compile regex, match regex, search regex, etc. (re module)
  - "site": allow to read the license file
  - "stdin", "stdout", "stderr": sys.stdin, sys.stdout and sys.stderr
