--- a/README
+++ b/README
@@ -47,6 +47,7 @@ Features
 
  - "debug_sandbox": enable traceback on the sandbox itself
  - "exit": sys.exit() and raise SystemExit()
+ - "help": pydoc.help(), use "import pydoc" outside the sandbox to use it
  - "interpreter": give access to stdio streams, enable traceback
  - "regex": compile regex, match regex, search regex, etc. (re module)
  - "site": allow to read the license file
