--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 Known issues
 ------------
 
+ * dict.__setitem__(__builtins__, 'SUPERGLOBAL', 42)
+   Same leak for ReadOnlyList and SafeModule
  * Enable USE_CPYTHON_HACKS option?
  * "with" frame locals are not protected by the proxy (see above)
 
