--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@ Known issues
 
  * dict.__setitem__(__builtins__, 'SUPERGLOBAL', 42)
    Same leak for ReadOnlyList and SafeModule
+ * ReadOnlyDict.pop()
  * Enable USE_CPYTHON_HACKS option?
  * "with" frame locals are not protected by the proxy (see above)
 
