--- a/README
+++ b/README
@@ -34,6 +34,7 @@ Protection of the sandbox itself:
  * Read frame locals
  * Get type subclasses
  * __builtins__ is read only
+ * Deny access to dict.__setitem__
 
 
 Configuration
