--- a/TODO
+++ b/TODO
@@ -6,6 +6,9 @@ Known issues
 Major tasks
 -----------
 
+ * Remove sandbox.guard
+ * It's no more needed to copy globals type/functions in closure because
+   __builtins__ is read only: need to cleanup sandbox/*.py (eg. safe_open.py)
  * Python3:
    - fix proxy.py: Python3 has no builtin file type
    - fix proxy.py: Python3 has no types.ClassType nor types.InstanceType
