--- a/TODO
+++ b/TODO
@@ -1,12 +1,20 @@
 Known issues
 ------------
 
+ * Check types in whitelist:
+
+   class Str(str):
+      def __eq__(self, other):
+         return True
+   getattr(sys, Str("_getframe"))
+
  * "with" frame locals are not protected by the proxy (see above)
 
 Major tasks
 -----------
 
  * Remove sandbox.guard
+ * safe_import(): from_list default value is mutable
  * It's no more needed to copy globals type/functions in closure because
    __builtins__ is read only: need to cleanup sandbox/*.py (eg. safe_open.py)
  * SandboxConfig.allowModuleSourceCode(): don't import the module just to get
