Add masklinn to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,8 @@ AUTHORS
 Tav <tav AT espians.com> - author of safelite.py
 Victor Stinner <victor.stinner AT haypocalc.com> - author of pysandbox, based on safelite.py
 
+Contributors
+============
+
+masklinn <github.com AT masklinn.net> - fix reST documentation syntax
+
