Prepare the removal of with ... syntax
 * Sandbox.call() and Sandbox.createCallback() returns the result
 * Update README examples: don't use with
 * Create Sandbox._call() method
 * Create Sandbox._enable() and Sandbox._disable() methods: keep
   __enter__ and __exit__ until with syntax is completly removed

--- a/README
+++ b/README
@@ -86,10 +86,22 @@ Other options
 Example
 =======
 
-Code:
+With call() method: ::
 
-   with Sandbox():
-      ... execute unsafe code here ...
+    from sandbox import Sandbox
+
+    def func(a, b):
+        return a + b
+
+    sandbox = Sandbox()
+    print sandbox.call(func, 1, 2)
+
+With execute() method: ::
+
+    from sandbox import Sandbox, SandboxConfig
+    sandbox = Sandbox(SandboxConfig('stdout'))
+    sandbox.execute('print("Code executed in the sandbox")')
+
 
 
 See also
