--- a/TODO
+++ b/TODO
@@ -48,5 +48,5 @@ Todo later
    import sys; sys.setrecursionlimit(50)
    http://mail.python.org/pipermail/python-dev/2009-February/086463.html
  * Fix "raise" in interpreter.py. Is it really a problem?
- * Limit CPU / memory usage
+ * Limit memory usage
 
