update TODO list

--- a/TODO
+++ b/TODO
@@ -1,6 +1,9 @@
 Major tasks
 -----------
 
+ * Write a whitelist for builtin functions
+ * interpreter.py has a quit() builtin function (instance of site.Quitter)
+   which is not protected by a proxy
  * safe_import(): from_list default value is mutable
  * SandboxConfig.allowModuleSourceCode(): don't import the module just to get
    the filename
@@ -22,6 +25,9 @@ Open questions
  * Deny creation of an arbitray code object? type(lambda: 0), compile(),
    generator.gi_code, ...
  * Deny builtins: execfile?, reload?, input?, eval?
+ * A function keeps its func_globals. Is it a problem?
+ * A generator can be controled: .throw(), .send(), etc. Is it a problem if the
+   generator was created outside the sandbox?
 
 Minor tasks
 -----------
