--- a/TODO
+++ b/TODO
@@ -1,8 +1,10 @@
 Major tasks
 -----------
 
+ * block input() / raw_input()?
+ * block BaseException? KeyboardInterrupt?
+ * block compile()?
  * .execute(code, locals={}) deny creation of new local variables
- * Write a whitelist for builtin functions
  * interpreter.py has a quit() builtin function (instance of site.Quitter)
    which is not protected by a proxy
  * safe_import(): from_list default value is mutable
