--- a/README
+++ b/README
@@ -43,13 +43,14 @@ To enable a feature, use SandboxConfig('feature1', 'feature2', ...) or
 config.enable('feature'). Available features:
 
  - "debug_sandbox": enable traceback of the sandbox itself
- - "exit": sys.exit() and raise SystemExit()
+ - "exit": sys.exit(), BaseException, KeyboardInterrupt and SystemExit
  - "future": from __future__ import ...
  - "help": pydoc.help(), use "import pydoc" outside the sandbox to use it
  - "interpreter": give access to standard streams, enable traceback
  - "regex": compile regex, match regex, search regex, etc. (re module)
  - "site": allow to read the license file
- - "stdin", "stdout", "stderr": sys.stdin, sys.stdout and sys.stderr
+ - "stdin": sys.stdin, input() and raw_input()
+ - "stdout", "stderr": sys.stdout and sys.stderr
  - "traceback": next calls to allowModule() will add the module filename to the
    open() whitelist, so Python can display a traceback with the source code
  - "unicodedata": unicodedata module, required for u'\N{ATOM SYMBOL}' syntax
