--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 Known issues
 ------------
 
- * interpreter feature should not allow compile() builtin
+ * compile feature should not give access to the code type
  * traceback feature should not allow frame.f_code attribute
 
 Major tasks
